[package]
name = "gen_graph"
version = "0.1.0"
authors = ["Rannveig Varisedottir <ElementalRannveig@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.2.16"
rlua = "0.17.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
structopt = "0.3.23"
